--- a/initialApp-master/RentApp/RentApp.csproj
+++ b/initialApp-master/RentApp/RentApp.csproj
@@ -262,10 +262,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AppUsersController.cs" />
+    <Compile Include="Controllers\BranchesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RentsController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
     <Compile Include="Controllers\TypeOfVehiclesController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\VehiclesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -285,6 +289,10 @@
     <Compile Include="Migrations\201806041041344_rent list in appuser.Designer.cs">
       <DependentUpon>201806041041344_rent list in appuser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806050741049_price per hour umesto houre.cs" />
+    <Compile Include="Migrations\201806050741049_price per hour umesto houre.Designer.cs">
+      <DependentUpon>201806050741049_price per hour umesto houre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -296,6 +304,10 @@
     <Compile Include="Models\Entities\TypeOfVehicle.cs" />
     <Compile Include="Models\Entities\Vehicle.cs" />
     <Compile Include="Persistance\RADBContext.cs" />
+    <Compile Include="Persistance\Repository\Implementation\Repository.cs" />
+    <Compile Include="Persistance\Repository\Implementation\ServiceRepository.cs" />
+    <Compile Include="Persistance\Repository\Interface\IRepository.cs" />
+    <Compile Include="Persistance\Repository\Interface\IServiceRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Providers\CustomJwtFormat.cs" />
@@ -388,6 +400,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806041041344_rent list in appuser.resx">
       <DependentUpon>201806041041344_rent list in appuser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806050741049_price per hour umesto houre.resx">
+      <DependentUpon>201806050741049_price per hour umesto houre.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
