--- a/angularApp/package.json
+++ b/angularApp/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng2-file-upload": "^1.3.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.2.0",
